# soldr

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN_PHASE1.md  INTEGRATION.md  LICENSE  README.md  RELEASE.md  SECURITY.md  action.yml  benchmark.toml  install  install.sh  lint  package.json  pyproject.toml  rust-toolchain.toml  test
.github/actions/cache-benchmark-zccache/: action.yml
.github/actions/cache-benchmark-zccache-cleanup/: action.yml
.github/actions/setup-soldr/: ensure_rust_toolchain.py  ensure_soldr.py  install_tool_shims.py  resolve_setup.py  verify_soldr.py
.github/scripts/: cache_benchmark_child_branch_report.py  cache_benchmark_report.py  setup_soldr_parent_child_probe_report.py  windows-msys-default-msvc.sh
.github/workflows/: _bootstrap-e2e.yml  _cache-benchmark-build.yml  _cache-benchmark-scenario.yml  build-linux-arm64-musl.yml  build-linux-arm64.yml  build-linux-x64-musl.yml  build-linux-x64.yml  build-macos-arm64.yml  build-macos-x64.yml  build-windows-arm64.yml  build-windows-x64.yml  cache-benchmark-child-branch.yml  cache-benchmark.yml  ci.yml  parent-child-zccache-probe.yml  release-auto.yml  release.yml  setup-soldr-action.yml  setup-soldr-parent-child-probe.yml
crates/soldr-cache/: Cargo.toml
crates/soldr-cache/src/: lib.rs
crates/soldr-cli/: Cargo.toml
crates/soldr-cli/src/: main.rs
crates/soldr-cli/tests/: cli.rs
crates/soldr-cli/tests/fixtures/windows-msvc-default/: Cargo.toml  build.rs
crates/soldr-cli/tests/fixtures/windows-msvc-default/native/: hello.c
crates/soldr-core/: Cargo.toml
crates/soldr-core/src/: lib.rs
crates/soldr-fetch/: Cargo.toml
crates/soldr-fetch/src/: known_tools.rs  lib.rs  trust.rs
crates/soldr-fetch/tests/: fetch_crgx.rs
docs/: API.md  API_BOUNDARY.md  CI_CACHE.md  CI_CACHE_PHASE1.md  NPM_PUBLISHING.md  PYPI_TRUSTED_PUBLISHING.md  RELEASE_0_5_CHECKLIST.md  RELEASE_GOVERNANCE_CHECKLIST.md  RELEASE_VERIFICATION.md  SETUP_SOLDR_EXPORTER.md  SETUP_SOLDR_PUBLIC_ACTION.md  TRUST_BOUNDARIES.md
examples/: ci-minimal.yml
scripts/: install.js  test-npm-package.js
src/: lib.rs
src/soldr/: __init__.py  setup_soldr_exporter.py
tests/: test_cache_benchmark_report.py  test_cli.py  test_setup_soldr_action.py  test_setup_soldr_ensure_rust_toolchain.py  test_setup_soldr_ensure_soldr.py  test_setup_soldr_exporter.py  test_setup_soldr_install_tool_shims.py  test_setup_soldr_parent_child_probe_report.py  test_setup_soldr_pins.py  test_setup_soldr_verify_soldr.py
tests/fixtures/setup_soldr_exporter/: expected_README.md  expected_action.yml
tools/: export_setup_soldr_action.py
www/benchmarks/: index.html
