[workspace]
resolver = "2"
members = [
    "crates/soldr-core",
    "crates/soldr-fetch",
    "crates/soldr-cache",
    "crates/soldr-cli",
]

[workspace.package]
version = "0.7.5"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/zackees/soldr"
homepage = "https://github.com/zackees/soldr"

[workspace.dependencies]
soldr-core = { path = "crates/soldr-core", version = "0.7.5" }
soldr-fetch = { path = "crates/soldr-fetch", version = "0.7.5" }
soldr-cache = { path = "crates/soldr-cache", version = "0.7.5" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tempfile = "3"
zip = "2"
flate2 = "1"
tar = "0.4"
toml = "0.8"
