[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "soldr"
# Version source of truth: Cargo.toml [workspace.package].version.
# maturin derives the Python package version from the Rust package metadata.
dynamic = ["version"]
description = "Instant tools. Instant builds. One command."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Zach Vorhies" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
keywords = ["rust", "build", "cache", "install", "tools"]

[project.urls]
Repository = "https://github.com/zackees/soldr"

[dependency-groups]
dev = [
    "maturin>=1.7,<2",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
]

[tool.maturin]
manifest-path = "crates/soldr-cli/Cargo.toml"
module-name = "soldr._native"
python-source = "src"
features = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
